--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "history": "^4.7.2",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "react-transition-group": "^1.2.1",
+    "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts-with-stylus start src/styles/style.styl",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "create-react-app-stylus": "^1.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
